public/style.css
:root {
	--bg: #0E1116;
	--bg-light: #151A21;
	--text: #E6EAF0;
	--border: #484848;
	--primary: #3caa3c;
}

body, html {
	width: 100%;
	height: 100%;
	padding: 0;
	margin: 0;
	background-color: var(--bg);
	color: var(--text);
	font-size: 16px;
	font-size: 1.1rem;
	box-sizing: border-box;
	font-family: monospace;
}

.wrapper {
	margin: 0 auto;
	width: 100%;
	max-width: 1280px;
	padding: 2rem;
	box-sizing: border-box;
}

.header {
	width: 100%;
	display: flex;
	gap: 1rem;
	justify-content: space-between;
	align-items: center;
}

.nav {
	display: flex;
	gap: 1rem;
}

a, a:visited {
	color: var(--primary);
}

a:hover {
	text-decoration: none;
}

.footer {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 1rem;
	padding-top: 5rem;
}

.footer-row {
	display: flex;
	align-items: center;
	flex-wrap: wrap;
	gap: 1rem;
}

pre:has(> code) {
	background-color: var(--bg-light);
	padding: 1rem;
	border-radius: 0.5rem;
}

p code, h1 code, h2 code, h3 code, li code {
	background-color: var(--bg-light);
	padding: 0.2rem 0.5rem;
	border-radius: 0.5rem;
}

pre {
	overflow-x: auto;
}

h1, h2, h3, h4 {
	color: var(--primary);
}

blockquote {
	border-left: 0.5rem solid var(--primary);
	padding: 0 1rem;
}

.main p:has(> img) {
	text-align: center;
}

.main img {
	border-radius: 0.5rem;
	max-width: 100%;
	transition: 1s;
}

.main video {
	max-width: 100%;
}

.main table {
	width: 100%;
}

.main table, .main tr, .main td {
	border: 1px solid var(--border);
}

.main td {
	padding: 0.5rem;
}

summary {
	font-size: 1.5rem;
}

.article-card {
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
	background: var(--bg-light);
	border-radius: 0.5rem;
	padding: 1rem;
	margin-top: 0.5rem;
	text-decoration: none;
	border: 1px solid transparent;
}

.article-card:hover {
	border: 1px solid var(--border);
}

.article-card span {
	color: var(--text);
}

